# ttp-vfl

./: CMakeLists.txt  LICENSE
src/: globals.hpp  main.cpp
src/model/: coordinator.cpp  coordinator.hpp  player.cpp  player.hpp
src/tasks/: linear_regression.cpp  linear_regression.hpp  logistic_regression.cpp  logistic_regression.hpp
src/utils/: utils.cpp  utils.hpp
